# motion_generator

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
config/bdx/: gait.json  motion.json
config/olaf/: gait.json  motion.json
robots/bdx/: bdx.urdf  collisions.json  limits.json
robots/olaf/: limits.json  olaf.urdf
robots/olaf/meshes/: left_foot_link.stl  left_foot_rotation.stl  left_hip.stl  left_hip_rotation.stl  left_shin.stl  left_thigh.stl  pelvis.stl  right_foot_link.stl  right_foot_rotation.stl  right_hip.stl  right_hip_rotation.stl  right_shin.stl  right_thigh.stl
scripts/: main.py  replay_motion.py  view_robot.py
src/motion_generator/: __init__.py  gait_generator.py  motion_engine.py
src/motion_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
